@@ -1,5 +1,13 @@
 2011-01-25  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/libcommon/fd.c (fd_timed_read_n, fd_timed_write_n,
+	  fd_timed_write_iov): Added optimization to skip the poll() on the
+	  first iteration of the loop for nonblocking sockets.  This helps the
+	  case where the read or write can complete immediately and in a single
+	  invocation, thereby eliding the overhead of gettimeofday() + poll().
+	  This is safe for nonblocking sockets since the loop already handles
+	  EAGAIN to continue with the next iteration of the loop.
+
 	* src/libcommon/fd.h: Tweaked function comment wrt "nonblocking".
 
 	* src/libcommon/fd.c: Tweaked var def spacing.
